<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">ASWAN Store</string>
    <string name="welcome_to_login">Welcome to Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="welcome_to_aswan_shopping">Welcome to ASWAN STORE.</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="login_now">Login Now</string>
    <string name="forget_password">Forgot Password?</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="create_account">Create Account</string>
    <string name="phone_number">Phone Number</string>
    <string name="user_name">User Name</string>
    <string name="saller">Seller</string>
    <string name="customer">Customer</string>
    <string name="remember_me">Remember Me.</string>
    <string name="don_t_have_account">Don\'t have an account?</string>
    <string name="create_your_account">Create your Account.</string>
    <string name="do_you_already_have_account">Do you already have an Account?</string>
    <string name="sign_in">Sign In</string>
    <string name="Reset_password">Reset Password !?</string>
    <string name="enter_phone_number">Enter Phone Number</string>
    <string name="send">Send</string>
    <string name="please_enter_your_Email_to_send_code_to_reset_your_password">Please Enter your Email to Send code to Reset your password.</string>
    <string name="otp_verification">OTP Verification</string>
    <string name="enter_the_otp_code_we_send_you">Enter the OTP code we send you.</string>
    <string name="didn_t_receive_the_otp">Didn\'t receive the OTP?</string>
    <string name="resend_otp">RESEND OTP.</string>
    <string name="verify_code">VERIFY CODE</string>
    <string name="new_n_credentials">NEW \n CREDENTIALS</string>
    <string name="update">UPDATE</string>
    <string name="new_password">New Password</string>
    <string name="enter_your_email">Enter Your Email ..</string>
    <string name="let_s_join_us">Let\'s Join Us.\nStart your journey in our app.</string>
    <string name="login_as_admin">Login As Admin ?</string>
    <string name="login_as_adm">Login As Admin </string>
    <string name="i_m_not_admin">I\'m Not Admin !</string>
    <string name="shoes">SHOES</string>
    <string name="laptops">LAPTOPS</string>
    <string name="t_shirts">CLOTHES</string>
    <string name="mobiles">Mobiles &amp; Tablets</string>
    <string name="dresses">DRESSES</string>
    <string name="suits">suits</string>
    <string name="sport_clothes">SPORT CLOTHES</string>
    <string name="fashion">Women\'s Fashion</string>
    <string name="glasses">Glasses</string>
    <string name="beauty">Beauty</string>
    <string name="home_essentials">Home Essentials</string>
    <string name="electronics_amp_accessories"><![CDATA[Electronics & Accessories]]></string>
    <string name="man_s_fashion">Man\'s Fashion</string>
    <string name="categories">Categories:</string>
    <string name="product_name">Product Name ..</string>
    <string name="product_description">Product Description ..</string>
    <string name="product_price">Product Price ..</string>
    <string name="add_product">Add Product</string>
    <string name="you_haven_t_add_any_item_yet">You haven\'t add any item yet</string>
    <string name="cart_is_empty">Cart Is Empty</string>
    <string name="_500">500</string>
    <string name="add_to_cart">ADD TO CART</string>
    <string name="see_description">Description</string>
    <string name="total">Total</string>
    <string name="please_write_your_shipment_details">Please Write your Shipment Details.</string>
    <string name="your_home_address">Your Home Address</string>
    <string name="confirm">Confirm</string>
    <string name="egp">EGP</string>
    <string name="quantity">Quantity</string>
    <string name="count">count</string>
    <string name="congratulation_soon_you_will_received_your_order_at_your_door_step">Congratulation, Soon you will received your order at your door step.</string>
    <string name="check_new_orders">Check New Orders</string>
    <string name="logout">LogOut</string>
    <string name="new_orders">New Orders:</string>
    <string name="_1_31_2021_12_00">1/31/2021 , 12:00</string>
    <string name="egypt_aswan">Egypt, Aswan</string>
    <string name="_01092939844">01092939844</string>
    <string name="show">Show</string>
    <string name="product">Product:</string>
    <string name="what_are_you_looking_for">What are you looking for?</string>
    <string name="welcome">Welcome!</string>
    <string name="nice_to_meet_you">Nice to meet you.</string>
    <string name="setting">SETTING</string>
    <string name="maintain_product">Maintain Product</string>
    <string name="apply_changes">Apply Changes</string>
    <string name="delete_product">Delete Product</string>
    <string name="seller_registration_form">Seller Registration Form</string>
    <string name="shop_business_address">Shop Business Address</string>
    <string name="register">Register</string>
    <string name="seller_login_form">Seller Login Form</string>
    <string name="are_you_new_member">Are You New Member !</string>
    <string name="easy_to_use_to_explore_additional_new_options_for_products_and_free_shopping">Easy To Use Explore Additional New Options for Products and free Shopping .</string>
    <string name="let_join_us">Let\'s Join Us</string>
    <string name="become_a_partner">Become a Partner</string>
    <string name="already_have_an_account">Already have an Account</string>
    <string name="welcome_dear_admin">Welcome Dear Admin</string>
    <string name="check_and_approve_new_orders">Check and Approve New Product</string>
    <string name="approve_new_products">Approve New Products</string>
    <string name="product_state">Product State</string>
    <string name="your_order_details">Your Order Details</string>
    <string name="selectedlanguage">ENGLISH</string>
    <string name="next">Next</string>
    <string name="your_an_admin">Your an Admin this app can you \ncontrol an App.</string>
    <string name="change_profile">Change Profile</string>
    <string name="about_us">About Us</string>
    <string name="about">We welcome you to the "Aswan Store". We help you to make your life easier and save your effort and your time. You will find here all the products of the shops in the market of the governorates of Aswan and Luxor, clothes, electronics, mobiles and so on. Our main goal of this application is to facilitate the buying and selling process for you through: credibility in product specifications by the merchant, realism where the goods in the store are identical to what is on the ground in the shops contracted with us, the speed of delivery and convenience, so instead of going shopping, you will shop With your mobile phone and the product will be delivered to your home. "Aswan Store" was established in 2021. We wanted to make a difference and we sought to implement the first online store for shopping in all parts of Aswan or Upper Egypt governorates. Luxuries that carry both luxury and quality. We offer you distinguished services, as the ease of the payment system, as well as allow you to retrieve the product in the absence of it suitable for you. We wish you to provide the best service and the best deal, and that you will be happy with our dealings as we were pleased with your honor to us. We await your suggestions for the sake of development for the better, and if you have any questions, comments, or complaints, do not hesitate to contact us: 01029104534.</string>
    <string name="language">Please Restart the app to support your language.</string>
    <string name="builderAbrove">Do you want to Approved this Product. Are you Sure?</string>
    <string name="toastAprove">That item has been Approved, and it is now available for sale from the seller.</string>
    <string name="errorPass">You must have 8 characters in your password</string>
    <string name="restaurants">Restaurants</string>
    <string name="offers">Offers</string>
    <string name="watches">Watches</string>
    <string name="todo">TODO</string>
    <string name="handmade">Handmade</string>
    <string name="shipped">Have you shipped this order product?</string>
    <string name="yes">yes</string>
    <string name="no">No</string>
    <string name="desPass">You must have 8 characters in your password</string>
    <string name="validEmail">Please write a valid Email.</string>
    <string name="loginAdmin">Login Admin Account</string>
    <string name="checking">Please wait, While we are checking the Credentials.</string>
    <string name="sucess">Welcome Admin, Successfully</string>
    <string name="InCorrect_Email_and_Password">InCorrect Email and Password !</string>
    <string name="tostWrong">Something is Wrong, You Email InValid to adminA</string>
    <string name="ProductDeleted">The Product is Deleted Successfully.</string>
    <string name="InputProductName">Input Product Name ..</string>
    <string name="InputProductPrice">Input Product Price ..</string>
    <string name="InputProductDescription">Input Product Description ..</string>
    <string name="ChangesAppliedSuccessfull">Changes Applied Successfully.</string>
    <string name="ItemRemovedSuccessfully">Item Removed Successfully ..</string>
    <string name="CartOptions">Do you want to remove the product from the cart?</string>
    <string name="EDIT">Edit</string>
    <string name="REMOVE">Remove</string>
    <string name="PleaseProvideYourfullName">Please Provide Your full Name.</string>
    <string name="PleaseProvideYourPhoneNumber">Please Provide Your Phone Number.</string>
    <string name="PleaseProvideYourHomeAddress">Please Provide Your Home Address.</string>
    <string name="PleaseProvideYourDetails">Please Provide Your Details.</string>
    <string name="Youfinalorderasbeenplacedsuccessfully">Your final order has been placed successfully.</string>
    <string name="AddedtoCartList">Added to Cart List ..</string>
    <string name="Emailsrequired">Email is required!</string>
    <string name="Pleaseprovidevalidemail">Please provide valid email!</string>
    <string name="Checkyouremailtoresetpassword">Check your email to reset password ..</string>
    <string name="TryAgainSomethingwronghappened">Try Again! Something wrong happened ..</string>
    <string name="Youmusthave8characters">You must have 8 characters in your password</string>
    <string name="LoginAccount">Login Account</string>
    <string name="Credentials">Please wait, While we are checking the Credentials.</string>
    <string name="Failedtologin">Failed to login! Please check your credentials</string>
    <string name="Invalidemailaddress">Invalid email address</string>
    <string name="InvalidyourPhoneNumber">Invalid your Phone Number</string>
    <string name="Yomusthave8characters">You must have 8 characters in your password</string>
    <string name="PleasewriteyourUserName">Please write your User Name.</string>
    <string name="CreateAccount">Create Account</string>
    <string name="CreateAccountSuccessfully">Create Account has been Successfully.</string>
    <string name="DeleteProduct">Do you want to Delete this Product. Are you Sure?</string>
    <string name="ThatitemhasbeenDeleted">That item has been Deleted.</string>
    <string name="mandatory">Product Image is Uploaded…</string>
    <string name="InputDescription">Input Description ..</string>
    <string name="InputPrice">Input Price ..</string>
    <string name="InputName">Input Name ..</string>
    <string name="Invalidemailaddresslike">Invalid email address like ####@###.###</string>
    <string name="characters">You must have 8 characters in your password</string>
    <string name="Successfully">You are Registered Successfully ..</string>
    <string name="TryAgainandcheck">Try Again Please and check your Email Account ..</string>
</resources>