<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginAndRegister.Ui.LoginActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:scaleType="centerCrop"
        android:src="@drawable/slider" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="160dp"
        android:layout_height="100dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="20dp"
        android:src="@drawable/as_logo" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/imageView2"
        android:gravity="center"
        android:text="@string/welcome_to_aswan_shopping"
        android:textColor="@color/ColorTextWhite"
        android:textSize="18sp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/imageView"
        android:layout_marginStart="25dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="25dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txtwelcom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/welcome_to_login"
            android:textColor="@color/ColorTextDark"
            android:textSize="22sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginEnd="35dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txtwelcom2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/are_you_new_member"
                android:textColor="@color/ColorTextDark"
                android:textSize="18sp"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/go_to_signUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:clickable="true"
                android:focusable="true"
                android:text="@string/sign_up"
                android:textColor="@color/ColorTextSkip"
                android:textSize="18sp"
                android:textStyle="bold" />
        </LinearLayout>


        <EditText
            android:id="@+id/email_edt_login_fg"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/edit_txt_bag"
            android:drawableStart="@drawable/ic_email"
            android:drawablePadding="15dp"
            android:hint="@string/email"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:paddingStart="10dp"
            android:paddingTop="10dp"
            android:paddingEnd="10dp"
            android:paddingBottom="10dp" />

        <EditText
            android:id="@+id/password_edt_login_fg"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/edit_txt_bag"
            android:drawableStart="@drawable/ic_pass"
            android:drawablePadding="15dp"
            android:hint="@string/password"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:paddingStart="10dp"
            android:paddingTop="10dp"
            android:paddingEnd="10dp"
            android:paddingBottom="10dp" />

        <LinearLayout
            android:id="@+id/layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/checkbox_rm"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:text="@string/remember_me"
                android:textColor="@color/ColorTextDark"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/forget_pass_tv_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="5dp"
                android:layout_weight="1"
                android:onClick="callForgetPassword"
                android:text="@string/forget_password"
                android:textColor="@color/gradient_start_color"
                android:textSize="17sp"
                android:textStyle="bold" />

        </LinearLayout>


        <Button
            android:id="@+id/login_btn"
            android:layout_width="280dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="60dp"
            android:background="@drawable/button_back"
            android:clickable="true"
            android:focusable="true"
            android:shadowColor="@color/ColorTextDark"
            android:text="@string/login_now"
            android:textAllCaps="false"
            android:textColor="@color/ColorTextDark"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/login_admin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="3dp"
            android:layout_marginEnd="25dp"
            android:gravity="center"
            android:text="@string/login_as_admin"
            android:textColor="@color/ColorTextDark"
            android:textSize="18sp"
            android:textStyle="bold" />


    </LinearLayout>


</RelativeLayout>