<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Admin.Ui.AdminHomeActivity">

    <TextView
        android:id="@+id/admin_Welcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/welcome_dear_admin"
        android:textAlignment="center"
        android:textColor="@color/ColorTextDark"
        android:textSize="22sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/maintain_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/admin_Welcome"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/button_back"
        android:clickable="true"
        android:focusable="true"
        android:textAllCaps="false"
        android:text="@string/maintain_product"
        android:textColor="@color/ColorTextDark"
        android:textSize="18sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/check_orders_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/maintain_btn"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/button_back"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/check_new_orders"
        android:textColor="@color/ColorTextDark"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textAllCaps="false"/>

    <Button
        android:id="@+id/check_approve_product_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/check_orders_btn"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/button_back"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/check_and_approve_new_orders"
        android:textColor="@color/ColorTextDark"
        android:textSize="17sp"
        android:textStyle="bold"
        android:textAllCaps="false"/>

    <Button
        android:id="@+id/logout_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/button_back"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/logout"
        android:textColor="@color/ColorTextDark"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textAllCaps="false"/>


</RelativeLayout>