<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="170dp"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginEnd="15dp"
    android:layout_marginStart="15dp"
    android:layout_marginTop="10dp"
    app:cardElevation="6dp"
    app:cardCornerRadius="13dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/item_seller_product_img"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:src="@drawable/beauty"
            android:layout_marginTop="2dp"
            android:scaleType="fitXY"
            android:contentDescription="@string/todo" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/item_selle_product_txt_Name"
            android:text="@string/product_name"
            android:gravity="fill"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="30dp"
            android:layout_marginTop="2dp"
            android:textStyle="bold"
            android:textSize="16sp"
            android:maxLines="1"
            android:textColor="@color/ColorTextDark"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/item_seller_product_txt_des"
            android:text="@string/product_description"
            android:gravity="fill"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="25dp"
            android:textStyle="bold"
            android:textSize="16sp"
            android:textColor="@color/ColorTextDarksows"
            android:maxLines="1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="15dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp">


            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_weight="1">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/item_seller_product_txt_price"
                    android:text="@string/_500"
                    android:layout_gravity="center"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    android:maxLines="1"
                    android:textColor="@color/ColorTextDark"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="fill"
                    android:text="@string/egp"
                    android:layout_gravity="center"
                    android:layout_marginStart="4dp"
                    android:textColor="@color/ColorTextDark"
                    android:textSize="16sp"
                    android:textStyle="bold" />
            </LinearLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/product_seller_state"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="fill"
            android:text="@string/product_state"
            android:layout_gravity="center"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"
            android:layout_marginBottom="6dp"
            android:textColor="@color/ColorTextDark"
            android:textSize="16sp"
            android:textStyle="bold" />

    </LinearLayout>

</androidx.cardview.widget.CardView>